# pigeon-rs

./: .envrc  .gitignore  Cargo.toml  \  flake.nix  process-compose.yaml  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
client/: Cargo.toml
client/src/: http_client.rs
conf/: zoo.cfg
examples/: consume.rs  pubfetch.rs
examples/producer/: Cargo.toml
examples/producer/src/: main.rs
examples/system-stats/: Cargo.toml
examples/system-stats/src/: main.rs
legacy/: Cargo.toml
legacy/src/: lib.rs
legacy/src/app/: error.rs  metadata.rs  mod.rs  topics.rs
legacy/src/app/tests/: app_topic_tests.rs  mod.rs
legacy/src/client/: mod.rs
legacy/src/commands/: create_topic.rs  fetch.rs  produce.rs
legacy/src/data/: encoding.rs  mod.rs  record.rs
legacy/src/dur/: record.rs
legacy/src/dur/partition/: mod.rs
legacy/src/dur/segment/: mod.rs
legacy/src/dur/tests/: mod.rs
legacy/src/dur/topic/: mod.rs
legacy/src/http/: app_error.rs  mod.rs
legacy/src/http/responses/: create_topic_response.rs  record_response.rs
legacy/src/meta/: create_topic_entry.rs  mod.rs
pigeon-core/: Cargo.toml
pigeon-server/: Cargo.toml
pigeon-server/src/: main.rs
server/: Cargo.toml
server/src/: main.rs  record_batch.rs
server/src/app/: error.rs  mod.rs  topics.rs
server/src/app/tests/: app_topic_tests.rs
server/src/config/: mod.rs
server/src/dur/: error.rs  mod.rs  record.rs
server/src/dur/partition/: mod.rs
server/src/dur/segment/: index.rs  mod.rs
server/src/dur/tests/: mod.rs
server/src/dur/topic/: mod.rs
server/src/http/: app_error.rs  mod.rs
server/src/meta/: mod.rs
shared/: Cargo.toml
shared/src/: consts.rs  encoding.rs  lib.rs  logging.rs
shared/src/commands/: create_topic_command.rs  fetch_command.rs  mod.rs  produce_command.rs
shared/src/data/: encoding.rs  identifier.rs  mod.rs  offset_selection.rs  partitioner.rs  timestamp.rs
shared/src/response/: mod.rs  record_response.rs
shared/src/state/: partition_state.rs  topic_state.rs
src/: api_key.rs  bin_ser.rs  byte_buf.rs  client.rs  connection.rs  cursor.rs  example.rs  frame.rs  lib.rs  logging.rs  parse.rs  protocol.rs  server.rs
src/app/: error.rs  metadata.rs  mod.rs  topics.rs
src/app/tests/: app_topic_tests.rs
src/client/: consumer.rs  mod.rs
src/cmd/: cfetch.rs  create_topic.rs  describe_topic.rs  fetch.rs  mod.rs  ping.rs  produce.rs  unknown.rs
src/commands/: create_topic.rs  fetch.rs  mod.rs  produce.rs
src/config/: mod.rs
src/data/: encoding.rs  identifier.rs  mod.rs  offset_selection.rs  record.rs  record_batch.rs  record_set.rs  record_set_header.rs  timestamp.rs
src/data/state/: mod.rs  partition_state.rs  (+1 more)
src/db/: cluster.rs  mod.rs  topics.rs
src/dur/: error.rs  mod.rs  record_set.rs
src/fake/: mod.rs
src/http/: app_error.rs  mod.rs
src/meta/: create_topic_entry.rs  delete_topic_entry.rs  mod.rs
src/request/: create_partitions_request.rs  create_topics_request.rs  mod.rs
src/response/: create_partitions_response.rs  create_topics_response.rs  mod.rs
src/segment/: mod.rs  record_reader.rs  record_set.rs  record_writer.rs  segment.rs
tui/: Cargo.toml
tui/src/: app.rs  component.rs  event.rs  main.rs  prompt.rs  style.rs  tui_event.rs
(+16 files in other folders)
