[package]
name = "pigeon-rs"
version = "0.1.0"
edition = "2021"
authors = ["Stijn Veenman"]
readme = "README.md"
repository = "https://github.com/stijnveenman/pigeon-rs"

[[bin]]
name = "pigeon"
path = "src/bin/server.rs"

[[bin]]
name = "pigeon-cli"
path = "src/bin/cli.rs"

[dependencies]
atoi = "2.0.0"
bytes = "1"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0.217"
serde_bytes = "0.11.17"
bson = "2.13.0"
thiserror = "2.0.11"
anyhow = "1.0.95"
zookeeper-client = { version = "0.9.1", features = ["tokio"] }
