[workspace]
resolver = "3"
members = ["server", "shared"]

[workspace.dependencies]
bytes = "1"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0.217"
serde_json = "1.0.145"
thiserror = "2.0.11"
axum = { version = "0.8.6" }
anyhow = "1"
