[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
shared = { path = "../shared/" }
bytes = "1"
clap = { version = "4.5.17", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = "1.0.217"
serde_json = "1.0.145"
thiserror = "2.0.11"
anyhow = "1.0.95"
tempfile = "3.20.0"
rand = "0.9.2"
axum = { version = "0.8.6" }
